Removing .env File

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN = 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
+DISCORD_TOKEN = ODM5NTU0NDE0ODg0NDIxNjQz.GiVi0d.mILguwWjE2MIuPEpPHG30cejm-NdQLhdcbQQGY
