Removing .env File

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN = ODM5NTU0NDE0ODg0NDIxNjQz.GiVi0d.mILguwWjE2MIuPEpPHG30cejm-NdQLhdcbQQGY
+DISCORD_TOKEN = ODM5NTU0NDE0ODg0NDIxNjQz.G0KFvB.V4kmyNviIyiY45VXzfbJKqOrEDH-OjWsK5-v8g
